--- a/xing-config/pom.xml
+++ b/xing-config/pom.xml
@@ -5,13 +5,15 @@
 	<parent>
 		<groupId>com.xing</groupId>
 		<artifactId>xing</artifactId>
-		<version>2.0.0</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>xing-config</artifactId>
 	<packaging>jar</packaging>
 
-	<description>xing 配置中心，基于spring cloud config</description>
+	<name>${project.artifactId}</name>
+	<description>xingcloud 配置中心</description>
+	<url>https://github.com/XingCloudSpace/xingcloud</url>
 
 	<dependencies>
 		<!--配置中心-->
@@ -37,7 +39,6 @@
 			<artifactId>spring-boot-starter-undertow</artifactId>
 		</dependency>
 	</dependencies>
-
 
 	<build>
 		<plugins>
