--- a/xing-eureka/pom.xml
+++ b/xing-eureka/pom.xml
@@ -5,13 +5,15 @@
 	<parent>
 		<groupId>com.xing</groupId>
 		<artifactId>xing</artifactId>
-		<version>2.0.0</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>xing-eureka</artifactId>
 	<packaging>jar</packaging>
 
-	<description>xing 服务中心，基于eureka</description>
+	<name>${project.artifactId}</name>
+	<description>xingcloud 服务中心，基于eureka</description>
+	<url>https://github.com/XingCloudSpace/xingcloud</url>
 
 	<dependencies>
 		<!--服务中心-->
