--- a/xing-auth/pom.xml
+++ b/xing-auth/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>com.xing</groupId>
 		<artifactId>xing</artifactId>
@@ -13,6 +14,18 @@
 
 	<description>xing 认证授权中心，基于 spring security oAuth2</description>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.xing</groupId>
+				<artifactId>xing-bom</artifactId>
+				<version>${project.parent.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<!--配置中心客户端-->
 		<dependency>
@@ -23,14 +36,8 @@
 		<dependency>
 			<groupId>com.xing</groupId>
 			<artifactId>xing-upms-api</artifactId>
-			<version>2.0.0</version>
 		</dependency>
-		<!--security-->
-		<dependency>
-			<groupId>com.xing</groupId>
-			<artifactId>xing-common-security</artifactId>
-			<version>2.0.0</version>
-		</dependency>
+
 		<!--JDBC相关-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -41,12 +48,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
-		<!--缓存操作相关-->
-		<dependency>
-			<groupId>com.xing</groupId>
-			<artifactId>xing-common-cache</artifactId>
-			<version>2.0.0</version>
-		</dependency>
+
 		<!--spring security 、oauth、jwt依赖-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
