--- a/doc/db/Dockerfile
+++ b/doc/db/Dockerfile
@@ -1,11 +1,11 @@
 FROM mysql:5.7
 
-MAINTAINER lengleng(wangiegie@gmail.com)
+MAINTAINER xing(weixingmail@126.com)
 
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
 COPY ./doc/db/1schema.sql /docker-entrypoint-initdb.d
 
-COPY ./doc/db/2pigxx.sql /docker-entrypoint-initdb.d
+COPY ./doc/db/2xing.sql /docker-entrypoint-initdb.d
 
-COPY ./doc/db/3pigxx_ac.sql /docker-entrypoint-initdb.d
+COPY ./doc/db/3xing_ac.sql /docker-entrypoint-initdb.d
