--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.xing</groupId>
-	<artifactId>xing-parent</artifactId>
+	<artifactId>xing</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
@@ -13,24 +13,33 @@
     <url>https://github.com/XingCloudSpace/xingcloud</url>
 
     <properties>
-		<!-- spring-boot -->
 		<spring-boot.version>2.0.7.RELEASE</spring-boot.version>
-		<spring-boot-admin.version>2.0.4</spring-boot-admin.version>
-
-		<!-- for maven compiler plugin -->
+		<spring-cloud.version>Finchley.SR2</spring-cloud.version>
+		<spring-platform.version>Cairo-SR6</spring-platform.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
-
+		<spring-boot-admin.version>2.0.4</spring-boot-admin.version>
+		<hutool.version>4.3.0</hutool.version>
+		<mybatis-plus.version>3.0.6</mybatis-plus.version>
+		<kaptcha.version>0.0.9</kaptcha.version>
+		<swagger.version>2.9.2</swagger.version>
+		<curator.version>2.10.0</curator.version>
+		<velocity.version>1.7</velocity.version>
+		<lcn.version>4.1.0</lcn.version>
 		<jasypt.version>2.1.0</jasypt.version>
-
+		<ttl.version>2.10.1</ttl.version>
+		<elastic-job-lite.version>2.1.5</elastic-job-lite.version>
+		<mysql.connector.version>8.0.13</mysql.connector.version>
+		<security.oauth.version>2.3.3.RELEASE</security.oauth.version>
+		<jackson.modules>2.9.6</jackson.modules>
+		<activiti.version>5.22.0</activiti.version>
 		<!-- for docker compiler plugin -->
 		<docker-maven-plugin.version>0.4.12</docker-maven-plugin.version>
 		<docker.url>http://192.168.0.13:4243</docker.url>
 
 		<registry.url>192.168.0.13:5000</registry.url>
-
 		<git-commit.version>2.2.5</git-commit.version>
 	</properties>
 
@@ -90,21 +99,41 @@
 		<module>xing-upms</module>
 		<module>xing-common</module>
 		<module>xing-visual</module>
-        <module>xing-dependencies-bom</module>
-        <module>xing-bom</module>
     </modules>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.xing</groupId>
-                <artifactId>xing-dependencies-bom</artifactId>
-                <version>1.0.0</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring-boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.spring.platform</groupId>
+				<artifactId>platform-bom</artifactId>
+				<version>${spring-platform.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<!--jackson模块-->
+			<dependency>
+				<groupId>com.fasterxml.jackson.module</groupId>
+				<artifactId>jackson-modules-java8</artifactId>
+				<version>${jackson.modules}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<finalName>${project.name}</finalName>
