--- a/xing-config/src/main/resources/config/application-dev.yml
+++ b/xing-config/src/main/resources/config/application-dev.yml
@@ -85,7 +85,7 @@ swagger:
   contact:
     name:
     email:
-    url: https://pig4cloud.com/about.html
+    url: https://xing-vip.club/about.html
   authorization:
     name: Xing OAuth
     auth-regex: ^.*$
