--- a/xing-config/src/main/resources/config/xing-upms-server-dev.yml
+++ b/xing-config/src/main/resources/config/xing-upms-server-dev.yml
@@ -21,7 +21,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: xing1618
-    url: jdbc:mysql://xing-mysql:3306/pigxx?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true
+    url: jdbc:mysql://xing-mysql:3306/xing?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true
 
 # swagger相关配置,覆盖全局配置
 swagger:
