--- a/xing-config/src/main/resources/config/xing-upms-server-dev.yml
+++ b/xing-config/src/main/resources/config/xing-upms-server-dev.yml
@@ -2,8 +2,8 @@
 security:
   oauth2:
     client:
-      client-id: ENC(n3B4vW0wPXgGWM3kdWa4WA==)     #upms
-      client-secret: ENC(n3B4vW0wPXgGWM3kdWa4WA==) #upms
+      client-id: ENC(dKbMPdadTH+mSTUVWoSrYQ==)     # xing
+      client-secret: ENC(dKbMPdadTH+mSTUVWoSrYQ==) # xing
       scope: server
       # 默认放行url,子模块重写时application-dev.yml中的公共配置会被覆盖,所以要把公共配置中的放行url再写一次
       ignore-urls:
