--- a/xing-config/src/main/resources/config/xing-codegen-dev.yml
+++ b/xing-config/src/main/resources/config/xing-codegen-dev.yml
@@ -10,8 +10,23 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: xing1618
-    url: jdbc:mysql://xing-mysql:3306/xing?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true
+
+    ds-sys:
+      username: root
+      password: xing1618
+      url: jdbc:mysql://xing-mysql:3306/xing?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true
+
+    ds-act:
+      username: root
+      password: xing1618
+      url: jdbc:mysql://xing-mysql:3306/xing_ac?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true
+
+    ds-bus:
+      username: root
+      password: xing1618
+      url: jdbc:mysql://xing-mysql:3306/xing_bus?characterEncoding=utf8&zeroDatneTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true
+
   resources:
     static-locations: classpath:/static/,classpath:/views/
+
+
