--- a/xing-upms/xing-upms-api/pom.xml
+++ b/xing-upms/xing-upms-api/pom.xml
@@ -10,6 +10,7 @@
 
 	<artifactId>xing-upms-api</artifactId>
 	<packaging>jar</packaging>
+	<name>${project.artifactId}</name>
 
 	<description>xing 通用用户权限管理系统公共api模块</description>
 
